--- a/src/main/resources/templates/customer/list.html
+++ b/src/main/resources/templates/customer/list.html
@@ -14,6 +14,12 @@
                 <h1>List of customers</h1>
             </div>
             <div class="col-sm-7">
+                <a href="/logout">
+                    <button type="button" class="btn btn-outline-light">
+                        <th:block th:text="${username}"/>
+                    </button>
+                </a>
+
                 <button id="btnShowCreateModal" class="btn btn-outline-light">
                     <i class="fas fa-plus"></i>
                     <span>Add New Customer</span>
@@ -710,8 +716,6 @@
         customer.balance = 0;
         customer.locationRegion = locationRegion;
 
-        console.log(customer);
-
         $.ajax({
             headers: {
                 "accept": "application/json",
@@ -722,8 +726,9 @@
             data: JSON.stringify(customer)
         })
             .done((data) => {
-                // page.elements.tbCustomer.prepend(App.renderRowCustomer(data));
-
+                customer = data;
+                locationRegion = customer.locationRegion;
+                page.elements.tbCustomer.prepend(App.renderRowCustomer(customer, locationRegion));
 
                 page.commands.removeEventOpenModal();
                 page.commands.handleOpenModalDeposit();
