--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Login</title>
+    <link rel="stylesheet" href="/assets/izitoast/v1.4.0/iziToast-1.4.0.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:400,300">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="/assets/css/login.css">
@@ -46,9 +47,9 @@
                     <div class="cont_form_login">
                         <a href="#" onclick="ocultar_login_sign_up()" ><i class="material-icons">&#xE5C4;</i></a>
                         <h2>LOGIN</h2>
-                        <input type="text" placeholder="Email" />
-                        <input type="password" placeholder="Password" />
-                        <button class="btn_login" onclick="cambiar_login()">LOGIN</button>
+                        <input type="text" id="emailLogin" placeholder="Email" />
+                        <input type="password" id="passwordLogin" placeholder="Password" />
+                        <button id="btnLogin" class="btn_login">LOGIN</button>
                     </div>
 
                     <div class="cont_form_sign_up">
@@ -68,7 +69,28 @@
         </div>
     </div>
 
+
+    <script type="text/javascript" src="/assets/jquery/jquery-v3.6.0.min.js"></script>
+    <script type="text/javascript" src="/assets/izitoast/v1.4.0/iziToast-1.4.0.js"></script>
+
+    <script src="/assets/js/app.js"></script>
+
     <script>
+
+        const page = {
+            urls: {
+                login: App.BASE_URL_AUTH + "/login",
+                register: App.BASE_URL_AUTH + "/register"
+            },
+            elements: {},
+            commands: {},
+            initializeEventControl: {}
+        }
+
+        page.elements.emailLogin = $("#emailLogin");
+        page.elements.passwordLogin = $("#passwordLogin");
+        page.elements.btnLogin = $("#btnLogin");
+
         function cambiar_login() {
             document.querySelector('.cont_forms').className = "cont_forms cont_forms_active_login";
             document.querySelector('.cont_form_login').style.display = "block";
@@ -102,8 +124,45 @@
                 document.querySelector('.cont_form_sign_up').style.display = "none";
                 document.querySelector('.cont_form_login').style.display = "none";
             },500);
-
         }
+
+        page.commands.login = () => {
+            let user = {
+                "username": page.elements.emailLogin.val(),
+                "password": page.elements.passwordLogin.val()
+            }
+
+            $.ajax({
+                headers: {
+                    "accept": "application/json",
+                    "content-type": "application/json"
+                },
+                type: "POST",
+                url: page.urls.login,
+                data: JSON.stringify(user)
+            })
+            .done(() => {
+                App.IziToast.showSuccessAlert("Login successful");
+
+                setTimeout(() => {
+                    window.location.href = "/customers";
+                }, 1500)
+            })
+            .fail(() => {
+                App.IziToast.showErrorAlert("Login fail");
+            })
+        }
+
+        page.initializeEventControl = () => {
+            page.elements.btnLogin.on("click", () => {
+                page.commands.login();
+            })
+        }
+
+
+        $(() => {
+            page.initializeEventControl();
+        })
 
     </script>
 </body>
