--- a/src/main/resources/templates/layout/script.html
+++ b/src/main/resources/templates/layout/script.html
@@ -6,6 +6,7 @@
     <script type="text/javascript" src="/assets/sweetalert/v2/sweetalert2.js"></script>
     <script type="text/javascript" src="/assets/bootstrap/v5.2.2/js/bootstrap.bundle.min.js"></script>
     <script type="text/javascript" src="/assets/js/popper-v1.16.0.min.js"></script>
+    <script type="text/javascript" src="/assets/izitoast/v1.4.0/iziToast-1.4.0.js"></script>
 
     <script src="/assets/js/app.js"></script>
 </th:block>
